fix(css): alignment fixes on portfolio

--- a/_scss/core/_mixins.scss
+++ b/_scss/core/_mixins.scss
@@ -2,7 +2,7 @@
 	$hero-grad-opacity: 0.88;
 	$hero-color-1: rgba(shade($base-color300, 40%), $hero-grad-opacity);
 	$hero-color-2: rgba(shade($base-color300, 25%), $hero-grad-opacity);
-	$hero-img-src: "/images/hero-bg-2.jpg";
+	$hero-img-src: "/images/hero-bg-3.jpg";
 	$hero-angle: 0deg;
 
 	background: $background-color300; // fallback for image
